Update behavior + composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "yiicod/yii2-base",
+    "description": "The base behaviors, helpers, etc. for the Yii2 framework",
     "type": "yii-extension",
     "license": "New BSD License",
     "authors": [
